--- a/enalapril.html
+++ b/enalapril.html
@@ -318,23 +318,23 @@ const T = {
     drugForm: "Kiniin afka ah (Tablet til at tage gennem munden)",
     sections: {
       use: { title:"Isticmaalka", small:"(Anvendelse)", items:[
-        "Enalapril waa daawo ka tirsan ACE-joojiyaasha (Ace-hæmmer), kuwaas oo yareeya walax jirka ku jirta oo kordhisa cadaadiska dhiigga (angiotensin-II), taasoo ka caawisa hoos u dhigidda dhiig-karka, iyo fududeynta shaqada wadnaha daciifka ah."
+        "Enalapril waa daawo ka tirsan ACE-joojiyaasha (ACE-hæmmer). Waxay yareysaa walax jirka ku jirta oo kordhisa cadaadiska dhiigga (angiotensin II). Taas ayaa ka caawisa hoos u dhigidda dhiig-karka, waxayna fududaysaa shaqada wadnaha marka uu daciifo."
       ]},
       dose: { title:"Qiyaasta", small:"(Dosering)", items:[
-        "Waxaa lagu bilaabaa qiyaas hoose 1–2 jeer maalintii.",
-        "Dhakhtarku si tartiib tartiib ah ayuu u kordhiyaa qiyaasta, iyadoo la eegayo cadaadiska dhiigga."
+        "Badanaa waxaa lagu bilaabaa qiyaas hoose, 1–2 jeer maalintii.",
+        "Dhakhtarku si tartiib tartiib ah ayuu u kordhiyaa qiyaasta, iyadoo la eegayo cadaadiska dhiigga iyo jawaabta jirka."
       ]},
       side: { title:"Waxyeellooyinka", small:"(Bivirkninger)", items:[
-        "Qufac qalalan oo joogto ah, madax-wareer iyo daal.",
-        "Barar wajiga, dibnaha ama cunaha (angioødem) waa khatar oo u baahan isbitaal degdeg ah."
+        "Qufac qalalan oo joogto ah, madax-wareer, iyo daal.",
+        "Barar wajiga, dibnaha ama cunaha (angioødem) waa xaalad halis ah oo u baahan gargaar degdeg ah."
       ]},
       interact: { title:"Isdhexgalka daawooyinka", small:"(Interaktioner)", items:[
-        "Kaniiniyada potassium (kalium) iyo alaabta cusbada ee potassium ku jirto waa in si taxaddar leh loo isticmaalo.",
-        "Daawooyinka qaar ee kelyaha ama kuwa ka hortaga bararka (NSAID) waxay kordhiyaan khatarta kilyaha oo dhaawacma."
+        "Kiniiniyada potassium (kalium) iyo beddelka cusbada ee potassium ku jirto waa in si taxaddar leh loo isticmaalo.",
+        "Daawooyinka qaar ee kelyaha saameeya, iyo xanuun-joojiyeyaasha NSAID (tusaale ibuprofen), waxay kordhin karaan khatarta dhibaatooyinka kelyaha."
       ]},
       warn: { title:"Digniino", small:"(Advarsler)", items:[
-        "Ha isticmaalin haddii aad uur leedahay ama qorsheyneyso uur.",
-        "Haddii aad aad u dawakhdo ama kaadida yarayso, la xiriir dhakhtarka."
+        "Ha isticmaalin haddii aad uur leedahay ama qorshaynayso uur.",
+        "Haddii aad aad u dawakhdo ama kaadidu si muuqata u yaraato, la xiriir dhakhtarkaaga."
       ]},
       ramadan: { title:"Ramadaan iyo soonka", small:"(Ramadan og faste)", items:[
         "Qiyaasta waxaa inta badan loo wareejin karaa fiidkii ama <span class='highlight'>cuntada ka hor waaberiga (suhoor)</span>.",
@@ -345,7 +345,7 @@ const T = {
         "Cab biyo kugu filan maalintii oo dhan."
       ]},
       store: { title:"Kaydinta daawada", small:"(Opbevaring)", items:[
-        "Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C. Ku hay baakadka asalka ah, si looga ilaaliyo iftiinka iyo huurka. Ha qaadan daawada marka ay dhaafto taariikhda \"EXP\" (daawada goorta ee dhacday), ama haddii midabka isbadalay. Wixii soo haray, weydii farmashiyaha si loogu tuuro meesha ku habboon."
+        "Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C. Ku hay baakadka asalka ah, si looga ilaaliyo iftiinka iyo huurka. Ha qaadan daawada marka ay dhaafto <span class='highlight'>taariikhda dhicitaanka</span> (expiry date) ama haddii midabku isbeddelay. Wixii soo haray, weydii farmashiyaha si loogu tuuro meesha ku habboon."
       ]}
     },
     footerHTML: "Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir <span class=\"highlight\">farmashiyaha</span> ama dhakhtarkaaga.<br/>(Hvis du har brug for mere information, kontakt dit lokale apotek eller din egen læge.)",
@@ -365,11 +365,11 @@ const T = {
       ]},
       dose: { title:"Dosering", small:"", items:[
         "Man starter ofte med en lav dosis 1–2 gange dagligt.",
-        "Lægen øger dosis gradvist efter blodtryk og effekt."
+        "Lægen øger dosis gradvist ud fra blodtryk og effekt."
       ]},
       side: { title:"Bivirkninger", small:"", items:[
         "Tør hoste, svimmelhed og træthed.",
-        "Hævelse i ansigt, læber eller hals (angioødem) er sjældent men alvorligt og kræver akut hjælp."
+        "Hævelse i ansigt, læber eller hals (angioødem) er sjældent, men alvorligt, og kræver akut hjælp."
       ]},
       interact: { title:"Interaktioner", small:"", items:[
         "Kaliumtilskud og saltsubstitutter med kalium skal bruges med forsigtighed.",
@@ -377,7 +377,7 @@ const T = {
       ]},
       warn: { title:"Advarsler", small:"", items:[
         "Må ikke bruges under graviditet eller hvis du planlægger graviditet.",
-        "Kontakt lægen hvis du bliver meget svimmel eller hvis du tisser markant mindre."
+        "Kontakt lægen, hvis du bliver meget svimmel, eller hvis du tisser markant mindre."
       ]},
       ramadan: { title:"Ramadan og faste", small:"", items:[
         "Dosis kan ofte flyttes til aften eller til måltidet før daggry (suhoor).",
@@ -388,7 +388,7 @@ const T = {
         "Drik tilstrækkeligt med vand i løbet af dagen."
       ]},
       store: { title:"Opbevaring", small:"", items:[
-        "Opbevar utilgængeligt for børn og under 25 °C. Opbevar i original emballage for at beskytte mod lys og fugt. Brug ikke efter udløbsdatoen (EXP) eller hvis farven har ændret sig. Spørg apoteket om korrekt bortskaffelse af rester."
+        "Opbevar utilgængeligt for børn og under 25 °C. Opbevar i original emballage for at beskytte mod lys og fugt. Brug ikke efter <span class='highlight'>udløbsdatoen</span> eller hvis farven har ændret sig. Spørg apoteket om korrekt bortskaffelse af rester."
       ]}
     },
     footerHTML: "Hvis du har brug for mere information, kontakt <span class=\"highlight\">apoteket</span> eller din læge.",
@@ -431,7 +431,7 @@ const T = {
         "Drink enough water throughout the day."
       ]},
       store: { title:"Storage", small:"", items:[
-        "Keep out of reach of children and store below 25 °C. Keep in the original packaging to protect from light and moisture. Do not use after the expiry date (EXP) or if the colour has changed. Ask the pharmacy how to dispose of leftovers properly."
+        "Keep out of reach of children and store below 25 °C. Keep in the original packaging to protect from light and moisture. Do not use after the <span class='highlight'>expiry date</span> or if the colour has changed. Ask the pharmacy how to dispose of leftovers properly."
       ]}
     },
     footerHTML: "If you need more information, contact your <span class=\"highlight\">pharmacy</span> or doctor.",
@@ -458,8 +458,8 @@ const T = {
         "تورم الوجه أو الشفتين أو الحلق (وذمة وعائية) نادر لكنه خطير ويحتاج إلى رعاية عاجلة."
       ]},
       interact: { title:"التداخلات الدوائية", small:"", items:[
-        "مكملات البوتاسيوم وبدائل الملح التي تحتوي على بوتاسيوم يجب استخدامها بحذر.",
-        "بعض الأدوية التي تؤثر على الكلى ومسكنات NSAIDs قد تزيد خطر مشاكل الكلى."
+        "يجب استخدام مكملات البوتاسيوم وبدائل الملح التي تحتوي على بوتاسيوم بحذر.",
+        "قد تزيد بعض الأدوية التي تؤثر على الكلى ومسكنات NSAIDs (مثل إيبوبروفين) من خطر مشاكل الكلى."
       ]},
       warn: { title:"تحذيرات", small:"", items:[
         "لا يُستخدم أثناء الحمل أو عند التخطيط للحمل.",
@@ -474,7 +474,7 @@ const T = {
         "اشرب كمية كافية من الماء خلال اليوم."
       ]},
       store: { title:"الحفظ", small:"", items:[
-        "يُحفظ بعيداً عن متناول الأطفال وتحت 25°م. احفظه في العبوة الأصلية للحماية من الضوء والرطوبة. لا تستخدمه بعد تاريخ الانتهاء (EXP) أو إذا تغيّر اللون. اسأل الصيدلية عن طريقة التخلص من البقايا."
+        "يُحفظ بعيداً عن متناول الأطفال وتحت 25°م، وفي العبوة الأصلية للحماية من الضوء والرطوبة. لا تستخدمه بعد <span class='highlight'>تاريخ الانتهاء</span> أو إذا تغيّر اللون. اسأل الصيدلية عن طريقة التخلص من البقايا."
       ]}
     },
     footerHTML: "إذا كنت بحاجة إلى مزيد من المعلومات، تواصل مع <span class=\"highlight\">الصيدلية</span> أو طبيبك.",
@@ -517,7 +517,7 @@ const T = {
         "Gün boyunca yeterli su için."
       ]},
       store: { title:"Saklama", small:"", items:[
-        "Çocukların erişemeyeceği yerde ve 25 °C’nin altında saklayın. Işık ve nemden korumak için orijinal ambalajında tutun. Son kullanma tarihinden (EXP) sonra kullanmayın veya renk değişikliği varsa kullanmayın. Artan ilaçların imhası için eczaneye danışın."
+        "Çocukların erişemeyeceği yerde ve 25 °C’nin altında saklayın. Işık ve nemden korumak için orijinal ambalajında tutun. <span class='highlight'>Son kullanma tarihinden</span> sonra veya renk değişikliği varsa kullanmayın. Artan ilaçların imhası için eczaneye danışın."
       ]}
     },
     footerHTML: "Daha fazla bilgi için <span class=\"highlight\">eczane</span> veya doktorunuzla iletişime geçin.",
@@ -548,7 +548,7 @@ const T = {
         "کچھ گردوں پر اثر کرنے والی دوائیں اور NSAIDs گردوں کے مسائل کا خطرہ بڑھا سکتی ہیں۔"
       ]},
       warn: { title:"احتیاطیں", small:"", items:[
-        "حمل میں استعمال نہ کریں اور اگر حمل کا ارادہ ہو تو ڈاکٹر کو بتائیں۔",
+        "حمل میں استعمال نہ کریں، اور اگر حمل کا ارادہ ہو تو ڈاکٹر کو بتائیں۔",
         "اگر بہت زیادہ چکر آئیں یا پیشاب واضح طور پر کم ہو جائے تو ڈاکٹر سے رابطہ کریں۔"
       ]},
       ramadan: { title:"رمضان اور روزہ", small:"", items:[
@@ -560,7 +560,7 @@ const T = {
         "دن بھر مناسب مقدار میں پانی پئیں۔"
       ]},
       store: { title:"محفوظ رکھنا", small:"", items:[
-        "بچوں کی پہنچ سے دور اور 25 °C سے کم درجۂ حرارت پر رکھیں۔ روشنی اور نمی سے بچانے کے لیے اصل پیک میں رکھیں۔ میعاد ختم ہونے (EXP) کے بعد استعمال نہ کریں یا اگر رنگ بدل گیا ہو۔ باقی ادویات تلف کرنے کے لیے فارمیسی سے پوچھیں۔"
+        "بچوں کی پہنچ سے دور رکھیں اور 25 °C سے کم درجۂ حرارت پر رکھیں۔ روشنی اور نمی سے بچانے کے لیے اصل پیک میں رکھیں۔ <span class='highlight'>میعاد ختم ہونے کی تاریخ</span> کے بعد استعمال نہ کریں، یا اگر رنگ بدل گیا ہو۔ باقی ادویات تلف کرنے کے لیے فارمیسی سے پوچھیں۔"
       ]}
     },
     footerHTML: "مزید معلومات کے لیے <span class=\"highlight\">فارمیسی</span> یا اپنے ڈاکٹر سے رابطہ کریں۔",
@@ -587,11 +587,11 @@ const T = {
         "تورم صورت، لب‌ها یا گلو (آنژیوادم) نادر اما خطرناک است و نیاز به کمک فوری دارد."
       ]},
       interact: { title:"تداخل‌های دارویی", small:"", items:[
-        "مکمل‌های پتاسیم و جایگزین‌های نمک حاوی پتاسیم باید با احتیاط مصرف شوند.",
+        "مکمل‌های پتاسیم و جایگزین‌های نمکِ حاوی پتاسیم باید با احتیاط مصرف شوند.",
         "برخی داروهای مؤثر بر کلیه و NSAIDها می‌توانند خطر مشکلات کلیوی را افزایش دهند."
       ]},
       warn: { title:"هشدارها", small:"", items:[
-        "در بارداری استفاده نشود و اگر قصد بارداری دارید به پزشک اطلاع دهید.",
+        "در بارداری استفاده نشود، و اگر قصد بارداری دارید به پزشک اطلاع دهید.",
         "اگر خیلی سرگیجه دارید یا ادرار شما به‌طور واضح کم شد، با پزشک تماس بگیرید."
       ]},
       ramadan: { title:"رمضان و روزه", small:"", items:[
@@ -603,7 +603,7 @@ const T = {
         "در طول روز آب کافی بنوشید."
       ]},
       store: { title:"نگهداری", small:"", items:[
-        "دور از دسترس کودکان و در دمای زیر 25 °C نگهداری شود. برای محافظت از نور و رطوبت در بسته‌بندی اصلی نگه دارید. پس از تاریخ انقضا (EXP) یا در صورت تغییر رنگ مصرف نکنید. برای دورریز مناسب باقی‌مانده‌ها از داروخانه راهنمایی بگیرید."
+        "دور از دسترس کودکان و در دمای زیر 25 °C نگهداری شود. برای محافظت از نور و رطوبت در بسته‌بندی اصلی نگه دارید. پس از <span class='highlight'>تاریخ انقضا</span> یا در صورت تغییر رنگ مصرف نکنید. برای دورریز مناسب باقی‌مانده‌ها از داروخانه راهنمایی بگیرید."
       ]}
     },
     footerHTML: "برای اطلاعات بیشتر با <span class=\"highlight\">داروخانه</span> یا پزشک خود تماس بگیرید.",
@@ -630,11 +630,11 @@ const T = {
         "پف‌کردگی صورت، لب‌ها یا گلو (آنژیوادم) نادر اما خطرناک است و کمک فوری می‌خواهد."
       ]},
       interact: { title:"تداخلات دوایی", small:"", items:[
-        "مکمل‌های پتاسیم و بدیل‌های نمک حاوی پتاسیم باید با احتیاط استفاده شود.",
+        "مکمل‌های پتاسیم و بدیل‌های نمکِ حاوی پتاسیم باید با احتیاط استفاده شود.",
         "بعضی دواهای مؤثر بر کلیه و NSAIDها می‌توانند خطر مشکلات کلیوی را زیاد کنند."
       ]},
       warn: { title:"هشدارها", small:"", items:[
-        "در بارداری استفاده نشود و اگر قصد بارداری دارید به داکتر بگویید.",
+        "در بارداری استفاده نشود، و اگر قصد بارداری دارید به داکتر بگویید.",
         "اگر بسیار سرگیجه دارید یا ادرار شما واضح کم شد، با داکتر تماس بگیرید."
       ]},
       ramadan: { title:"رمضان و روزه", small:"", items:[
@@ -646,7 +646,7 @@ const T = {
         "در طول روز آب کافی بنوشید."
       ]},
       store: { title:"نگهداری", small:"", items:[
-        "دور از دسترس اطفال و در درجهٔ حرارت زیر 25 °C نگه‌داری کنید. در بسته‌بندی اصلی برای محافظت از نور و رطوبت نگه‌دارید. بعد از تاریخ انقضا (EXP) یا در صورت تغییر رنگ استفاده نکنید. برای دور انداختن باقی‌مانده‌ها از دواخانه راهنمایی بگیرید."
+        "دور از دسترس اطفال و در درجهٔ حرارت زیر 25 °C نگه‌داری کنید. در بسته‌بندی اصلی برای محافظت از نور و رطوبت نگه‌دارید. بعد از <span class='highlight'>تاریخ انقضا</span> یا در صورت تغییر رنگ استفاده نکنید. برای دور انداختن باقی‌مانده‌ها از دواخانه راهنمایی بگیرید."
       ]}
     },
     footerHTML: "برای معلومات بیشتر با <span class=\"highlight\">دواخانه</span> یا داکتر خود تماس بگیرید.",
@@ -677,7 +677,7 @@ const T = {
         "ځینې د پښتورګو اغېزمن درمل او NSAID درمل کولی شي د پښتورګو ستونزو خطر زیات کړي."
       ]},
       warn: { title:"احتیاط", small:"", items:[
-        "په امیندوارۍ کې مه کاروئ او که د امیندوارۍ پلان لرئ ډاکټر ته ووایئ.",
+        "په امیندوارۍ کې مه کاروئ، او که د امیندوارۍ پلان لرئ ډاکټر ته ووایئ.",
         "که ډېر سر ګرځېږي یا ادرار مو څرګند کم شي، له ډاکټر سره اړیکه ونیسئ."
       ]},
       ramadan: { title:"رمضان او روژه", small:"", items:[
@@ -689,13 +689,17 @@ const T = {
         "د ورځې په اوږدو کې کافي اوبه وڅښئ."
       ]},
       store: { title:"ساتنه", small:"", items:[
-        "له ماشومانو لرې او تر 25 °C لاندې وساتئ. د رڼا او رطوبت څخه د ساتنې لپاره په اصلي بکس/بسته کې وساتئ. د ختمېدو نېټې (EXP) وروسته یا د رنګ بدلون په صورت کې مه کاروئ. د پاتې درملو د مناسبې ضایع کولو لپاره له درملتون څخه پوښتنه وکړئ."
+        "له ماشومانو لرې او تر 25 °C لاندې وساتئ. د رڼا او رطوبت څخه د ساتنې لپاره په اصلي بکس/بسته کې وساتئ. د <span class='highlight'>ختمېدو نېټې</span> وروسته، یا د رنګ بدلون په صورت کې، مه کاروئ. د پاتې درملو د مناسبې ضایع کولو لپاره له درملتون څخه پوښتنه وکړئ."
       ]}
     },
     footerHTML: "د نورو معلوماتو لپاره له <span class=\"highlight\">درملتون</span> یا خپل ډاکټر سره اړیکه ونیسئ.",
     creditHTML: "چمتو کوونکی: فارمکونومېسټ ابراهیم ظاهر حنف"
   }
 };
+
+function stripTags(s){
+  return s.replace(/<[^>]*>?/gm, "");
+}
 
 function setDirLang(lang){
   document.documentElement.lang = lang;
@@ -710,10 +714,6 @@ function fillList(listId, items){
     li.innerHTML = html;
     ul.appendChild(li);
   });
-}
-
-function stripTags(s){
-  return s.replace(/<[^>]*>?/gm,'');
 }
 
 function render(lang){
@@ -766,6 +766,11 @@ function render(lang){
 
   document.getElementById("footerNote").innerHTML = d.footerHTML;
   document.getElementById("credit").innerHTML = d.creditHTML;
+
+  // keep language when going back
+  const backA = document.querySelector("a.back");
+  const base = backA.getAttribute("href").split("?")[0];
+  backA.setAttribute("href", base + "?lang=" + encodeURIComponent(lang));
 }
 
 render("so");
